--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             --card-bg: #1e1e1e;
             --text-color: #e0e0e0;
             --border-color: #333333;
+            --highlight-green: #2ecc71;
         }
 
         * {
@@ -31,8 +32,7 @@
         }
 
         .container {
-            width: 100%;
-            max-width: 1200px;
+            max-width: 1440px;
             margin: 0 auto;
             padding: 1rem;
         }
@@ -71,7 +71,7 @@
         }
 
         .current-round {
-            border-left: 4px solid #2ecc71;
+            border-left-color: var(--highlight-green);
             background-color: rgba(46, 204, 113, 0.1);
             padding: 0.75rem 1rem;
             border-radius: 0 8px 8px 0;
@@ -86,7 +86,7 @@
         }
 
         .current-round .round-header {
-            color: #2ecc71;
+            color: var(--highlight-green);
             display: flex;
             align-items: center;
         }
@@ -95,7 +95,7 @@
             content: '• Current Round';
             font-size: 0.8rem;
             margin-left: 1rem;
-            background-color: #2ecc71;
+            background-color: var(--highlight-green);
             color: white;
             padding: 0.2rem 0.5rem;
             border-radius: 1rem;
@@ -117,7 +117,6 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 0.5rem;
-            position: relative;
         }
 
         .team {
@@ -134,13 +133,13 @@
         }
 
         .winner-team {
-            color: #2ecc71;
-            /* Green */
+            color: var(--highlight-green);
             font-weight: bold;
         }
 
         .match-score {
-            background-color: #e9e9e9;
+            background-color: #2c2c2c;
+            color: white;
             padding: 0.3rem 0.8rem;
             border-radius: 1rem;
             font-weight: bold;
@@ -158,21 +157,21 @@
         }
 
         .score {
-            background-color: #f0f0f0;
+            background-color: #2a2a2a;
+            color: #ccc;
             padding: 0.25rem 0.5rem;
             border-radius: 3px;
         }
 
-        .match-result {
-            font-weight: bold;
-            color: var(--primary-color);
-            font-size: 0.9rem;
-            margin-left: 0.5rem;
-        }
-
+        .match-result,
         .winner {
             font-weight: bold;
             color: var(--primary-color);
+            font-size: 0.9rem;
+        }
+
+        .rankings {
+            overflow-x: auto;
         }
 
         .rankings table {
@@ -188,16 +187,47 @@
         }
 
         .rankings th {
-            background-color: #f0f0f0;
+            background-color: #2c2c2c;
+            color: #fff;
             font-weight: 600;
         }
 
         .rankings tr:nth-child(even) {
-            background-color: #f9f9f9;
+            background-color: #1a1a1a;
         }
 
         .rankings tr:hover {
-            background-color: #f0f0f0;
+            background-color: #2a2a2a;
+        }
+
+        .rankings table {
+            width: 100%;
+        }
+
+        .rankings th:nth-child(1),
+        /* Rank */
+        .rankings td:nth-child(1),
+        .rankings th:nth-child(3),
+        /* Matches */
+        .rankings td:nth-child(3),
+        .rankings th:nth-child(4),
+        /* Goals± */
+        .rankings td:nth-child(4),
+        .rankings th:nth-child(5),
+        /* Sets± */
+        .rankings td:nth-child(5),
+        .rankings th:nth-child(6),
+        /* Points */
+        .rankings td:nth-child(6) {
+            width: 60px;
+            text-align: center;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        tbody tr:nth-child(-n+4) td:nth-child(2) {
+            font-weight: bold;
         }
 
         .file-input {
@@ -208,6 +238,8 @@
             display: block;
             width: 100%;
             padding: 0.5rem;
+            background-color: var(--card-bg);
+            color: var(--text-color);
             border: 1px solid var(--border-color);
             border-radius: 0.25rem;
             margin-top: 0.5rem;
@@ -219,52 +251,14 @@
             color: #666;
         }
 
-        header {
-            background-color: var(--primary-color);
-            color: white;
-        }
-
-        .match-score {
-            background-color: #2c2c2c;
-            color: white;
-        }
-
-        .score {
-            background-color: #2a2a2a;
-            color: #cccccc;
-        }
-
-        .rankings th {
-            background-color: #2c2c2c;
-            color: #ffffff;
-        }
-
-        .rankings tr:nth-child(even) {
-            background-color: #1a1a1a;
-        }
-
-        .rankings tr:hover {
-            background-color: #2a2a2a;
-        }
-
-        .file-input input {
-            background-color: #1e1e1e;
-            color: #e0e0e0;
-            border: 1px solid var(--border-color);
-        }
-
-        tbody tr:nth-child(-n+4) td:nth-child(2) {
-            font-weight: bold;
-        }
-
-        /* Responsive design */
+        /* Responsive */
         @media (min-width: 768px) {
             .content {
                 flex-direction: row;
             }
 
             .rounds {
-                flex: 1;
+                flex: 2;
             }
 
             .rankings {
@@ -354,7 +348,7 @@
                     const hasCompleteMatch = matches.some(match => {
                         for (let i = 1; i <= 5; i++) {
                             const score = match[`score set ${i}`];
-                            if (score || score.toString().trim() !== '') return true;
+                            if (score) return true;
                         }
                         return false;
                     });
@@ -599,7 +593,7 @@
             // Create table header
             const thead = document.createElement('thead');
             const headerRow = document.createElement('tr');
-            ['Rank', 'Team', 'Matches', 'Goals±', 'Sets±', 'Points'].forEach(text => {
+            ['#', 'Team', 'Num.', 'G±', 'S±', 'P'].forEach(text => {
                 const th = document.createElement('th');
                 th.textContent = text;
                 headerRow.appendChild(th);
